--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -263,6 +263,8 @@ dependencies:
 
   flutter_smart_dialog: 4.9.8+5
 
+  package_info_plus: 4.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
