--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,12 +97,7 @@ dependencies:
       url: https://github.com/linagora/dns_client.git
       ref: twake-supported
 
-  # TODO: We will change it when the PR in upstream repository will be merged
-  # https://github.com/espresso3389/flutter_pdf_render/pull/148
-  pdf_render:
-    git:
-      url: https://github.com/linagora/flutter_pdf_render.git
-      ref: main
+  pdfrx: 1.0.94
 
   # TODO: We will change it when the PR in upstream repository will be merged
   # https://github.com/solid-software/languagetool_textfield/pull/83
@@ -151,7 +146,7 @@ dependencies:
 
   external_path: 1.0.3
 
-  path_provider: 2.1.1
+  path_provider: 2.1.5
 
   device_info_plus: 8.1.0
 
@@ -193,7 +188,7 @@ dependencies:
 
   json_annotation: 4.8.0
 
-  url_launcher: 6.1.10
+  url_launcher: 6.3.1
 
   firebase_core: 2.7.0
 
@@ -253,7 +248,7 @@ dependencies:
 
   app_settings: 5.1.1
 
-  web_socket_channel: 2.4.3
+  web_socket_channel: 2.4.4
 
   flutter_web_auth_2: 3.1.1
 
